# cookie-clicker-bot

./: README.md  pyproject.toml  requirements.txt
cookie_clicker_bot/: __main__.py  bot.py
cookieclicker/: __main__.py  bot.py
tests/: test_bot.py
