[tool.poetry]
name = "cookie-clicker-bot"
version = "0.1.0"
description = "A simple bot for Cookie Clicker online game."
authors = ["Igor Ferreira <iferreira.n01@gmail.com>"]
readme = "README.md"
packages = [{include = "cookie_clicker_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.7.2"


[tool.poetry.group.dev.dependencies]
flake8 = "<5.0.0"
blue = "^0.9.1"
isort = "^5.11.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
